# HelloGL

./: .gitmodules  CMakeLists.txt
resources/shaders/: default.frag  default.vert
source/: CMakeLists.txt  Main.cpp  Window.cpp  Window.hpp
source/common/: TypeAliases.hpp
source/render/: Meshes.cpp  Meshes.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  StaticMesh.cpp  StaticMesh.hpp
source/render/mesh/: Meshes.cpp  Meshes.hpp  StaticMesh.cpp  StaticMesh.hpp
source/render/shader/: Shader.cpp  Shader.hpp  ShaderType.cpp  ShaderType.hpp
source/util/: FileUtils.cpp  FileUtils.hpp
